--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ repositories {
 
 dependencies {
 
+    implementation 'junit:junit:4.13.1'
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('com.h2database:h2')
+    compile('org.springframework.boot:spring-boot-starter-mustache')
     testCompile('org.springframework.boot:spring-boot-starter-test:2.6.2')
 }
